--- a/index.html
+++ b/index.html
@@ -8,15 +8,8 @@
       h1,
       h2 {
         font-family: Arial, sans-serif;
-        width: 400px;
+        width: 520px;
         padding: 5px;
-      }
-
-      p {
-        font-family: Times New Roman, serif;
-        width: 400px;
-        padding: 10px;
-        margin: 10px;
       }
 
       .header1 {
@@ -30,8 +23,12 @@
       }
 
       .paragraphs {
+        font-family: Times New Roman, serif;
         background-color: lavender;
         color: purple;
+        width: 500px;
+        padding: 10px;
+        margin: 10px;
       }
 
       a:link {
@@ -100,4 +97,6 @@
   I am the very model of a modern Major-Gineral.
 </p>
 
-<i class="paragraphs">For more info see the <a href="https://en.wikipedia.org/wiki/Major-General's_Song" target="_blank">Major-General's Song</a> page on Wikipedia.</i>
+<p class="paragraphs">
+  <i>For more info see the <a href="https://en.wikipedia.org/wiki/Major-General's_Song" target="_blank">Major-General's Song</a> page on Wikipedia.</i>
+</p>
